--- a/indentation.html
+++ b/indentation.html
@@ -2,3 +2,5 @@ Visual Studio Code
 Shortcut
 Shift + Tab = to reverse indentation ( select the necessary code and then indent it )
 Ctrl + ] = forward indentation ( select the necessary code and then indent it )
+option + shift + F = formating in html
+
