--- a/indentation.html
+++ b/indentation.html
@@ -2,5 +2,5 @@ Visual Studio Code
 Shortcut
 Shift + Tab = to reverse indentation ( select the necessary code and then indent it )
 Ctrl + ] = forward indentation ( select the necessary code and then indent it )
-option + shift + F = formating in html
+command + a then command + K + F = formats the code
 
