--- a/Macshortcut.html
+++ b/Macshortcut.html
@@ -1,2 +1,4 @@
 command + shift + 3 = to take the screenshot
 cd / in terminal and ls = to go to Applications
+pwd = present working directory
+sudo chmod -R 777 /Users/rahulkumarsingh/documents/shoppingmall(directory name which i got from pwd going to that folder)
