--- a/Macshortcut.html
+++ b/Macshortcut.html
@@ -2,3 +2,7 @@ command + shift + 3 = to take the screenshot
 cd / in terminal and ls = to go to Applications
 pwd = present working directory
 sudo chmod -R 777 /Users/rahulkumarsingh/documents/shoppingmall(directory name which i got from pwd going to that folder)
+
+Terminal command
+to know the ipaddress
+ipconfig getifaddr en0 or ipconfig getifaddr en0 or ifconfig -l | xargs -n1 ipconfig getifaddr
