Update visual studio code.html

--- a/visual studio code.html
+++ b/visual studio code.html
@@ -5,4 +5,5 @@ Ctrl + ] = forward indentation ( select the necessary code and then indent it )
 command + a then command + K + F = formats the code
 select the word and then command + shift + L  selects all the similar words and you can replace it by typing
 if you do not see the html files VSCode + View + Explorer
-
+command + K + C = to comment the code
+command + K + U = to uncomment the code
