Update visual studio code.html

--- a/visual studio code.html
+++ b/visual studio code.html
@@ -7,3 +7,4 @@ select the word and then command + shift + L  selects all the similar words and 
 if you do not see the html files VSCode + View + Explorer
 command + K + C = to comment the code
 command + K + U = to uncomment the code
+command + shift + F = to search for the code in all the files
